[package]
name = "systray"
version = "0.4.1"
authors = ["Kyle Machulis <kyle@machul.is>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "http://github.com/qdot/systray-rs"
repository = "https://github.com/qdot/systray-rs.git"
readme = "README.md"
keywords = ["gui"]
edition = "2018"

[dependencies]
log= "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi= { version = "0.3", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }
libc= "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk= "0.9"
glib= "0.10"
libappindicator= "0.5"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc="*"
# cocoa="*"
# core-foundation="*"
