[package]
name = "sciter-serde"
version = "0.3.2"
description = "Serde support for Sciter engine."
keywords = ["serde", "gui", "gtk", "opengl", "skia"]
categories = ["gui", "web-programming", "rendering::graphics-api", "api-bindings"]

authors = ["pravic <ehysta@gmail.com>"]
repository = "https://github.com/sciter-sdk/rust-sciter"
documentation = "https://docs.rs/sciter-serde"
license = "MIT"

exclude = [".gitignore", ".editorconfig", ".appveyor.yml"]

[badges]
appveyor = { repository = "sciter-sdk/rust-sciter" }
travis-ci = { repository = "sciter-sdk/rust-sciter" }

[dependencies]
sciter-rs = { version = "0.5" }
serde = "1"

[dev-dependencies]
serde_derive = "1"
serde_bytes = "0.10"
